--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -2,15 +2,20 @@
   <h2>Signup</h2>
   <form action="/users/signup" method="POST">
 
-    <label> Username
+    <label> Username:
       <input type="text" name="username" placeholder="ironhacker" />
     </label>
 
-    <label> Password
+    <label> Password:
       <input type="password" name="password" placeholder="********" />
     </label>
 
-    <button type="submit">Create account</button>
+    <button type="submit">Sign Up</button>
 
   </form>
+
+    {{#if errorMessage}}
+        <h3>{{errorMessage}}</h3>
+    {{/if}}
+
 </div>
